<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded_mint"
    android:orientation="vertical"
    android:padding="20dp">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_buscar_tarea"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/etBusqueda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:background="@drawable/bg_input_white"
        android:hint="@string/hint_escribe_nombre"
        android:paddingHorizontal="12dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:inputType="text"
        android:autofillHints="no"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="end">

        <TextView
            android:id="@+id/btnCancelarBusqueda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:gravity="center"
            android:text="@string/cancelar"
            android:textColor="#757575"
            android:textStyle="bold"
            android:padding="8dp"
            android:layout_marginEnd="12dp"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/btnRealizarBusqueda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:gravity="center"
            android:text="@string/buscar"
            android:textColor="#00897B"
            android:textStyle="bold"
            android:padding="8dp"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>

</LinearLayout>